[gd_scene load_steps=8 format=2]

[ext_resource path="res://Characters/Enimes/Undead/RoofEnimes/RoofShooter/Shot2.png" type="Texture" id=1]
[ext_resource path="res://Characters/Enimes/Undead/RoofEnimes/RoofShooter/Shot3.png" type="Texture" id=2]
[ext_resource path="res://Characters/Enimes/Undead/RoofEnimes/RoofShooter/Shot1.png" type="Texture" id=3]
[ext_resource path="res://Characters/Enimes/DefaultScripts/BasicProjectile.gd" type="Script" id=4]
[ext_resource path="res://Characters/Enimes/DefaultScripts/DamagePlayer.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.0
height = 4.0

[node name="Projectile" type="Node2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 2
frames = SubResource( 1 )
playing = true

[node name="Hitpoint" type="Area2D" parent="."]
collision_mask = 257
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitpoint"]
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
[connection signal="area_entered" from="Hitpoint" to="." method="_on_Hitpoint_area_entered"]
[connection signal="body_entered" from="Hitpoint" to="Hitpoint" method="_on_Hitpoint_body_entered"]
[connection signal="body_exited" from="Hitpoint" to="Hitpoint" method="_on_Hitpoint_body_exited"]
[connection signal="viewport_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_viewport_exited"]
